--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -17,6 +17,7 @@ Compile( source/calling_context.cpp, obj/calling_context.o)
 Compile( source/buffer_context.cpp, obj/buffer_context.o)
 Compile( source/ipc.cpp, obj/ipc.o)
 Compile( source/queue.cpp, obj/queue.o)
+Compile( source/types.cpp, obj/types.o)
 
 
 
@@ -26,7 +27,9 @@ LinkLibrary( casual_common, \
 	obj/calling_context.o \
 	obj/buffer_context.o \
 	obj/ipc.o \ 
-	obj/queue.o,\ 
+	obj/queue.o \
+	obj/types.o \
+	,\ 
 	casual_utility)
 
 	
