WIP Fixed an abstraction for the service-implementation-call. We don't need some ugly if:s and try:s in the generated code
Adopted monitor to detoct generation.

--- a/monitor/makefile.cmk
+++ b/monitor/makefile.cmk
@@ -9,18 +9,19 @@ INCLUDE_PATHS= include \
 
 LIBRARY_PATHS = ../common/bin ../xatmi/bin ../serviceframework/bin
 
+
+
+Compile( source/monitorvo.cpp, obj/monitorvo.o)
+
+LinkLibrary( casual_monitor_vo, \
+    obj/monitorvo.o, \
+    casual_common \
+    casual_sf)
+
+
 Compile( source/monitor.cpp, obj/monitor.o)
 Compile( source/monitor_main.cpp, obj/monitor_main.o)
 Compile( source/monitordb.cpp, obj/monitordb.o)
-Compile( source/monitor_sf_server.cpp, obj/monitor_sf_server.o)
-Compile( source/monitor_sf_server_implementation.cpp, obj/monitor_sf_server_implementation.o)
-Compile( source/monitor_vo.cpp, obj/monitor_vo.o)
-
-
-LinkLibrary( casual_monitor_vo, \
-    obj/monitor_vo.o, \
-    casual_common \
-    casual_sf)
 
 LinkExecutable( casual_monitor, \
 	obj/monitor.o \
@@ -30,10 +31,14 @@ LinkExecutable( casual_monitor, \
 	casual_common \
 	sqlite3 )
 
+
+Compile( source/statisticserver.cpp, obj/statisticserver.o)
+Compile( source/statisticimplementation.cpp, obj/statisticimplementation.o)
+
 LinkAtmiServer(casual_monitor_request_server, \
-    obj/monitor_sf_server.o \
-    obj/monitordb.o \
-    obj/monitor_sf_server_implementation.o, \
+    obj/statisticserver.o \
+    obj/statisticimplementation.o \
+    obj/monitordb.o, \
     casual_monitor_vo \
     casual-xatmi \
     casual_common \
