--- a/serviceframework/makefile.cmk
+++ b/serviceframework/makefile.cmk
@@ -21,6 +21,7 @@ Compile( source/buffer.cpp, obj/buffer.o)
 Compile( source/server.cpp, obj/server.o)
 Compile( source/service.cpp, obj/service.o)
 Compile( source/service_protocol.cpp, obj/service_protocol.o)
+Compile( source/archive_logger.cpp, obj/archive_logger.o)
 
 LinkLibrary( casual_sf,\
     obj/archive.o \
@@ -28,7 +29,9 @@ LinkLibrary( casual_sf,\
     obj/buffer.o \
     obj/server.o \
     obj/service.o \
-    obj/service_protocol.o, \
+    obj/service_protocol.o \
+    obj/archive_logger.o \
+    ,\
     casual_common yaml-cpp casual-xatmi)
 
 
@@ -42,6 +45,7 @@ Compile( unittest/isolated/source/test_yaml_archive.cpp, unittest/isolated/obj/t
 Compile( unittest/isolated/source/test_buffer.cpp, unittest/isolated/obj/test_buffer.o)
 Compile( unittest/isolated/source/test_service.cpp, unittest/isolated/obj/test_service.o)
 Compile( unittest/isolated/source/test_uuid.cpp, unittest/isolated/obj/test_uuid.o)
+Compile( unittest/isolated/source/test_logger_archive.cpp, unittest/isolated/obj/test_logger_archive.o)
 
 LinkIsolatedUnittest( casual_sf_isolated, \
 	unittest/isolated/obj/test_namevaluepair.o \
@@ -50,6 +54,8 @@ LinkIsolatedUnittest( casual_sf_isolated, \
 	unittest/isolated/obj/test_yaml_archive.o \
 	unittest/isolated/obj/test_buffer.o \
 	unittest/isolated/obj/test_service.o \
-	unittest/isolated/obj/test_uuid.o, \
+	unittest/isolated/obj/test_uuid.o \
+	unittest/isolated/obj/test_logger_archive.o \
+	, \
 	casual_sf casual-xatmi casual_common)
 	
