Simple broker-admin where you kan list servers or services
A few bugfixes.

--- a/broker/makefile.cmk
+++ b/broker/makefile.cmk
@@ -4,6 +4,7 @@ Include( $(CASUAL_BUILD_ENVIRONMENT))
 
 
 INCLUDE_PATHS= include \
+    admin/include \
 	../common/include \
 	../xatmi/include \
 	../serviceframework/include \
@@ -14,14 +15,29 @@ LIBRARY_PATHS = ../common/bin \
     ../serviceframework/bin \
 	../xatmi/bin \
 	$(YAML_LIBRARY_PATH)
+
+
+
+//
+// VO
+//
+Compile( admin/source/servicevo.cpp, admin/obj/servicevo.o)
+Compile( admin/source/servervo.cpp, admin/obj/servervo.o)
+
+LinkLibrary( casual-broker-admin-vo, \
+    admin/obj/servicevo.o \
+    admin/obj/servervo.o \
+    ,\
+    casual_sf ) 
+
 	
 
 Compile( source/broker.cpp, obj/broker.o)
 Compile( source/broker_main.cpp, obj/broker_main.o)
 Compile( source/action.cpp, obj/action.o)
 
-Compile( source/adminserverimplementation.cpp, obj/adminserverimplementation.o)
-Compile( source/adminserver.cpp, obj/adminserver.o)
+Compile( admin/source/adminserverimplementation.cpp, obj/adminserverimplementation.o)
+Compile( admin/source/adminserver.cpp, obj/adminserver.o)
 
 
 LinkExecutable( casual_broker, \
@@ -30,7 +46,17 @@ LinkExecutable( casual_broker, \
 	obj/action.o \
 	obj/adminserverimplementation.o \
 	obj/adminserver.o, \
-	casual_common casual_sf casual-xatmi)
+	casual_common casual_sf casual-xatmi casual-broker-admin-vo)
+	
+	
+//
+// admin-terminal
+//
+Compile( admin/source/broker_admin.cpp, obj/broker_admin.o)
+
+LinkExecutable( casual-broker-admin, \
+    obj/broker_admin.o, \
+    casual_common casual_sf casual-xatmi casual-broker-admin-vo)
 	
 	
 //
@@ -38,12 +64,14 @@ LinkExecutable( casual_broker, \
 //
 Compile( unittest/isolated/source/test_broker.cpp, unittest/isolated/obj/test_broker.o)
 Compile( unittest/isolated/source/test_broker_confguration.cpp, unittest/isolated/obj/test_broker_confguration.o)
+Compile( unittest/isolated/source/test_broker_transformation.cpp, unittest/isolated/obj/test_broker_transformation.o)
 
 
 LinkIsolatedUnittest( casual_broker_isolated, \
 	unittest/isolated/obj/test_broker.o \
-	unittest/isolated/obj/test_broker_confguration.o, \
-	casual_common casual_sf)
+	unittest/isolated/obj/test_broker_confguration.o \
+	unittest/isolated/obj/test_broker_transformation.o, \
+	casual_common casual_sf casual-broker-admin-vo)
 	
 	
 
