--- a/broker/admin.detoct.yaml
+++ b/broker/admin.detoct.yaml
@@ -7,24 +7,60 @@ general:
 
 declaration:
 
+
+  - value_object:
+      name: ServerVO
+      language: C++
+      namespace: admin
+      id: 300
+          
+      output_headers: admin/include/broker/
+      output_source:  admin/source/
+   
+      attributes:
+        - pid: long
+        - path: std::string
+        - queue: long
+        - idle: bool
+        
+  - value_object:
+      name: ServiceVO
+      language: C++
+      namespace: admin
+      id: 400
+          
+      output_headers: admin/include/broker/
+      output_source:  admin/source/
+   
+      attributes:
+        - nameF: std::string
+        - timeoutF: long
+        - pids: std::vector< long>     
+
   - server:
       name: AdminServer
       language: C++
     
-      output_headers: include/broker/
-      output_source:  source/  
+      output_headers: admin/include/broker/
+      output_source:  admin/source/  
     
       services:
-        - &broker_startServers
-          name: _broker_startServers
+        - &_broker_listServers
+          name: _broker_listServers
           id: 2000
           documentation: |
-            start a server
+            @return a list of all servers
     
-          return: void      
+          return: std::vector< admin::ServerVO>      
+     
+        - &_broker_listServices
+          name: _broker_listServices
+          id: 2010
+          documentation: |
+            @return a list of all services
+    
+          return: std::vector< admin::ServiceVO>
           
-          arguments:
-              - bajs: (in) const std::vector< std::string>&
   
           
           
