--- a/broker/makefile.cmk
+++ b/broker/makefile.cmk
@@ -14,7 +14,8 @@ INCLUDE_PATHS= include \
 LIBRARY_PATHS = ../common/bin \
     ../serviceframework/bin \
 	../xatmi/bin \
-	$(YAML_LIBRARY_PATH)
+	$(YAML_LIBRARY_PATH) \
+	$(JSON_LIBRARY_PATH)
 
 
 
