--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -13,7 +13,8 @@ INCLUDE_PATHS= include \
 LIBRARY_PATHS= ../xatmi/bin \
 	../common/bin \
 	../serviceframework/bin \
-	$(YAML_LIBRARY_PATH)
+	$(YAML_LIBRARY_PATH) \
+	$(JSON_LIBRARY_PATH)
 
 
 
