--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -36,7 +36,7 @@ Compile( source/process.cpp, obj/process.o)
 
 
 
-LinkLibrary( casual_common, \
+LinkLibrary( casual-common, \
 	obj/server_context.o \
 	obj/service_context.o \
 	obj/calling_context.o \
@@ -79,7 +79,7 @@ Compile( unittest/isolated/source/test_file.cpp, unittest/isolated/obj/test_file
 Compile( unittest/isolated/source/test_process.cpp, unittest/isolated/obj/test_process.o)
 Compile( unittest/isolated/source/test_string.cpp, unittest/isolated/obj/test_string.o)
 
-LinkIsolatedUnittest( casual_common_isolated, \
+LinkIsolatedUnittest( casual-common-isolated, \
 	unittest/isolated/obj/test_buffer.o \
 	unittest/isolated/obj/test_ipc.o \
 	unittest/isolated/obj/test_marshal.o \
@@ -91,5 +91,5 @@ LinkIsolatedUnittest( casual_common_isolated, \
     unittest/isolated/obj/test_process.o \
     unittest/isolated/obj/test_string.o \
     , \
-	casual_common )	
+	casual-common )	
 
