--- a/xatmi/makefile.cmk
+++ b/xatmi/makefile.cmk
@@ -15,7 +15,7 @@ Compile( source/xatmi_server.cpp, obj/xatmi_server.o)
 LinkLibrary( casual-xatmi, \
 	obj/xatmi.o \
 	obj/xatmi_server.o, \
-	casual_common)
+	casual-common)
 
 	
 //
@@ -24,6 +24,6 @@ LinkLibrary( casual-xatmi, \
 Compile( unittest/isolated/source/test_buffer.cpp, unittest/isolated/obj/test_buffer.o)
 
 
-LinkIsolatedUnittest( casual_xatmi_isolated, \
+LinkIsolatedUnittest( casual-xatmi-isolated, \
     unittest/isolated/obj/test_buffer.o, \
     casual-xatmi )
