--- a/xatmi/makefile.cmk
+++ b/xatmi/makefile.cmk
@@ -11,10 +11,16 @@ LIBRARY_PATHS = bin \
 Compile( source/xatmi.cpp, obj/xatmi.o)
 Compile( source/xatmi_server.cpp, obj/xatmi_server.o)
 
+Compile( source/xa.cpp, obj/xa.o)
+Compile( source/tx.cpp, obj/tx.o)
+
 
 LinkLibrary( casual-xatmi, \
 	obj/xatmi.o \
-	obj/xatmi_server.o, \
+	obj/xatmi_server.o \
+	obj/xa.o \
+	obj/tx.o \
+	, \
 	casual-common)
 
 	
