--- a/makefile.cmk
+++ b/makefile.cmk
@@ -5,6 +5,8 @@ Build( xatmi/makefile.cmk)
 
 Build( serviceframework/makefile.cmk)
 
+Build( configuration/makefile.cmk)
+
 Build( test/makefile.cmk)
 
 Build( broker/makefile.cmk)
